--- a/README
+++ b/README
@@ -1,2 +1,4 @@
-
-
+一. 链接：
+  https://thssmonkey.github.io/TankCombat/
+二. 功能清单：
+  ![image](https://github.com/thssmonkey/TankCombat/raw/master/images/docPic.png)
